# pcl-fusion

./: .coveragerc  .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt
calibration_data/: extrinsics_1844301041A0341300.npz  extrinsics_184430106103381300.npz  extrinsics_18443010B1B6381300.npz  point_cloud_alignment_1844301041A0341300.npy  point_cloud_alignment_184430106103381300.npy
calibrator/: calibrator_cam.py  calibrator_controller.py
core/: config.py  devices.py  fps.py
pointcloud/: host_sync.py  icp.py  make_pointcloud.py  pointcloud_cam.py  pointcloud_fusion.py
tests/: test_main.py
tests/test_calibrator/: test_calibrator_controller.py
tests/test_core/: test_devices.py  test_fps.py
tests/test_pointcloud/: test_host_sync.py  test_pointcloud_fusion.py
utils/: charuco_board.py  postprocessing.py
