[tool.poetry]
name = "pcl-fusion"
version = "0.1.0"
description = ""
authors = ["Andrey Ivanov <ivnv.xd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.26.0"
opencv-python = "^4.8.0.76"
depthai = "^2.22.0.0"
open3d = "^0.17.0"
loguru = "^0.7.2"
pytest = "^7.4.2"

scikit-learn = "^1.3.0"
addict = "^2.4.0"
pillow = "^10.0.1"
pandas = "^2.1.0"
tqdm = "^4.66.1"
pyyaml = "^6.0.1"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pyright]
typeCheckingMode = "basic"